hard-gists/163f5fdf47ab45d7addd/run.log
=== Docker Run Log for 163f5fdf47ab45d7addd ===
Started at: Mi 29. Okt 12:21:36 CET 2025

[2025-10-29 12:21:36] START: Running container for 163f5fdf47ab45d7addd
[2025-10-29 12:21:37] SUCCESS: Container 244a5906864f0950b2530cc8d65fbf737f567738829f98f8f7975a60fb3bf208 started for 163f5fdf47ab45d7addd
=== Container logs for 163f5fdf47ab45d7addd ===
  File "/snippet.py", line 136
    print 'Found instances on host:'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 163f5fdf47ab45d7addd ===
[2025-10-29 12:21:39] INFO: Container 244a5906864f0950b2530cc8d65fbf737f567738829f98f8f7975a60fb3bf208 has stopped
